fix alignment - update feeder_id to id query param

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -47,8 +47,8 @@
 	--primary-rgb-dark: 99, 102, 241;
 	--primary-soft: light-dark(rgba(79, 70, 229, 0.08), rgba(99, 102, 241, 0.15));
 
-	--success: light-dark(#108241, #34a55f);
-	--success-soft: light-dark(rgba(16, 100, 90, 0.2), rgba(52, 211, 153, 0.15));
+	--success: light-dark(#498262, #34a55f);
+	--success-soft: light-dark(#34644926, rgba(52, 211, 153, 0.15));
 	--warning: light-dark(#f59e0b, #fbbf24);
 	--warning-soft: light-dark(rgba(245, 158, 11, 0.1), rgba(251, 191, 36, 0.15));
 	--danger: light-dark(#ef4444, #f87171);
